--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.3",
-    "lucide-react": "^0.562.0",
-    "recharts": "^3.6.0",
-    "three": "0.170.0",
-    "react": "^19.2.3"
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "lucide-react": "0.475.0",
+    "recharts": "2.15.0",
+    "three": "0.173.0",
+    "framer-motion": "11.11.11"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
