--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.90.1",
+    "framer-motion": "11.11.11",
+    "lucide-react": "0.475.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "lucide-react": "0.475.0",
     "recharts": "2.15.0",
-    "three": "0.173.0",
-    "framer-motion": "11.11.11"
+    "three": "0.173.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
