--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
-    "framer-motion": "11.11.11",
+    "framer-motion": "^12.29.2",
     "lucide-react": "0.475.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
